outros ajustes
